--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                 <a href="#">Work</a> • <a href="#">About</a> • <a href="#">Contact</a>
             </div>
             <footer>
-                Replace the name, tagline, links, and model. This is a quick preview of your palette and layout.
+                Hi I'm Palma, and this is my website in making!
             </footer>
         </div>
 
