--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
         <div class="hero-left">
             <h1 id="page-title">Pálma Karsai | Rigging Artist</h1>
             <div class="tagline">
-                <a href="#">Work</a> • <a href="#">About</a> • <a href="#">Contact</a>
+                <a href="#">Work</a> • <a href="#">About</a> • <a href="https://www.linkedin.com/in/p%C3%A1lma-karsai-70b3a9298/">Contact</a>
             </div>
             <footer>
                 Hi I'm Palma, and this is my website in making!
