proper title and linked in new tab

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>Portfolio Preview — Pálma Karsai</title>
+    <title>Rigging Artist — Pálma Karsai</title>
     <!-- Include Paperlogy font -->
     <style>
         @font-face {
@@ -160,7 +160,7 @@
         <div class="hero-left">
             <h1 id="page-title">Pálma Karsai | Rigging Artist</h1>
             <div class="tagline">
-                <a href="#">Work</a> • <a href="#">About</a> • <a href="https://www.linkedin.com/in/p%C3%A1lma-karsai-70b3a9298/">Contact</a>
+                <a href="#">Work</a> • <a href="#">About</a> • <a target="_blank" href="https://www.linkedin.com/in/p%C3%A1lma-karsai-70b3a9298/">Contact</a>
             </div>
             <footer>
                 Hi I'm Palma, and this is my website in making!
